2007-06-16  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-applet-manager.c: (awn_applet_manager_load_applets):
	If there are no applets, add the task manager.

2007-06-16  Neil J. Patel  <njpatel@gmail.com>

	* libawn/Makefile.am:
	Added $(AWN_LIBS) to LDADD.

2007-06-16  Neil J. Patel  <njpatel@gmail.com>

		* src/awn-task-manager.c: (_refresh_box):
		Check that the task manager is valid.

2007-06-16  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-applet-manager.c: (_load_taskmanager), (_create_applet),
	(awn_applet_manager_load_applets):
	* src/main.c: (main):
	Task manager is now an (internal) applet. So you can order it like
	any other applet.

2007-06-16  Neil J. Patel  <njpatel@gmail.com>

	* applets/Makefile.am:
	* applets/taskman.desktop:
	An internal test applet.

 * src/main.c: (main):
 Swapped the threads_init function to be the first called.


2007-06-16  Neil J. Patel  <njpatel@gmail.com>

	* src/main.c: (main):
	Added a DBus thread init () function.

2007-06-16  Neil J. Patel  <njpatel@gmail.com>

	* COPYING:
	* applets/separator/Makefile.am:
	* applets/separator/applet.c: (awn_applet_factory_init):
	* applets/separator/separator.desktop.in.in:
	* configure.in:
	* libawn/awn-applet.c: (awn_applet_create_default_menu),
	(awn_applet_expose_event):
	* src/awn-applet-manager.c: (awn_applet_manager_load_applets),
	(awn_applet_manager_new):
	* src/awn-bar.c: (awn_bar_class_init), (awn_bar_init),
	(awn_bar_new), (render), (_on_expose), (awn_bar_add_separator):
	* src/awn-bar.h:
	Added a separator applet, which works quite nicely :-).

	* src/main.c: (main):
	Made sure g_thread_init () is called;

2007-06-16  Neil J. Patel  <njpatel@gmail.com>

	* COPYING:
	* INSTALL:
	* Makefile.am:
	* applets/Makefile.am:
	* applets/notification-area/Makefile.am:
	* applets/notification-area/applet.c: (tray_applet_refresh),
	(tray_icon_added), (tray_icon_removed), (tray_icon_message_sent),
	(tray_icon_message_cancelled), (awn_applet_factory_init):