@@ -43,7 +43,7 @@ G_BEGIN_DECLS
 #define AWN_IS_APPLET_MANAGER_CLASS(obj) (G_TYPE_CHECK_CLASS_TYPE ((obj),\
         AWN_TYPE_APPLET_MANAGER))
 
-#define AWN_APPLET_MANAGER_GET_CLASS	(G_TYPE_INSTANCE_GET_CLASS ((obj),\
+#define AWN_APPLET_MANAGER_GET_CLASS(obj)	(G_TYPE_INSTANCE_GET_CLASS ((obj),\
         AWN_TYPE_APPLET_MANAGER, \
         AwnAppletManagerClass))
 
